--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "markdown-preview"]
 	path = markdown-preview
 	url = https://github.com/AhmedBedeir/markdown-preview
+[submodule "drum-machine"]
+	path = drum-machine
+	url = https://github.com/AhmedBedeir/drum-machine
