--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "calculator"]
 	path = calculator
 	url = https://github.com/AhmedBedeir/calculator
+[submodule "pomodoro-timer"]
+	path = pomodoro-timer
+	url = https://github.com/AhmedBedeir/pomodoro-timer
